package com.library.notification.enums;

public enum Channel { EMAIL, WHATSAPP, SMS }