package com.library.notification.enums;
public enum DeliveryStatus { PENDING, SENT, FAILED }